---------------------------------------------------------------------------------------------------
Version: 0.69.9
Date: ????
  Changes:
    - Fixed crash from too many entities in localized strings.
---------------------------------------------------------------------------------------------------
Version: 0.69.8
Date: 2025-07-04
  Changes:
    - Bugfix with autosearching machines by crafting category.
---------------------------------------------------------------------------------------------------
Version: 0.69.7
Date: 2025-06-22
  Changes:
    - Fixed incompatibility with beacon-rebalance. This may cause issues with multiplayer. Please report them if you find any. In order to fix it, wretlaw would need to modify his interface to store his whitelist in storage, not local. This way I can whitelist in init/on_config_changed (which will then avoid desyncs).
    - Incompatible with Delta Beacon Rebalance, as I have no way to whitelist my beacons from it.
    - Fixed bug that kept making multiple beacons on an entity.
---------------------------------------------------------------------------------------------------
Version: 0.69.6
Date: 2025-06-21
  Changes:
    - Fixed bug where inserters could get stuck targetting the invisible beacons.
---------------------------------------------------------------------------------------------------
Version: 0.69.5
Date: 2025-06-21
  Changes:
    - Fixed issues with mods that would dynamically create/delete/merge forces. Also more robust multiplayer.
---------------------------------------------------------------------------------------------------
Version: 0.69.4
Date: 2025-06-21
  Changes:
    - Additional safeguards against adding player characters to upgrade lists.
    - Additional safeguards against other mods causing crashes by fucking with my modules.
---------------------------------------------------------------------------------------------------
Version: 0.69.3
Date: 2025-06-21
  Changes:
    - Fixed Crash